// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateAgentModule > snapshot: full agent module with model, tools, and prompt 1`] = `
"import { generateText } from 'ai';
import { anthropic } from '@ai-sdk/anthropic';

/**
 * Agent: ResearchBot
 * Generated by @agentforge/target-docker
 */

type Message = { role: 'user' | 'assistant'; content: string };

const conversationHistory: Message[] = [];

const SYSTEM_PROMPT = "You are a research assistant.";



import { z } from 'zod';
import { tool } from 'ai';

const agentTools = {
  WebSearch: tool({
    description: "Search the web",
    parameters: z.object({
    query: z.string().describe("Search query"),
  }),
    execute: async (params) => {
      return { results: [] };
    },
  }),
};


/**
 * Send a message to the ResearchBot agent and receive a response.
 *
 * @param userMessage - The user's input message.
 * @returns The assistant's response text.
 */
export async function chat(userMessage: string): Promise<string> {

  conversationHistory.push({ role: 'user', content: userMessage });

  const result = await generateText({
    model: anthropic('claude-sonnet-4'),
    system: SYSTEM_PROMPT,
    messages: conversationHistory,
    tools: agentTools,
    maxSteps: 10,
  });

  const assistantMessage = result.text;
  conversationHistory.push({ role: 'assistant', content: assistantMessage });

  return assistantMessage;
}

/**
 * Reset the conversation history for this agent.
 */
export function resetConversation(): void {
  conversationHistory.length = 0;
}

/**
 * Get the agent's display name.
 */
export const agentName = "ResearchBot";
"
`;

exports[`generateDockerCompose > snapshot: compose with MCP sidecar and env vars 1`] = `
"services:
  agent-runtime:
    build:
      context: .
      dockerfile: Dockerfile
    container_name: teststack-runtime
    ports:
      - "3000:3000"
    environment:
      - ANTHROPIC_API_KEY=\${ANTHROPIC_API_KEY}
      - ORG_ID=\${ORG_ID}
    restart: unless-stopped
    healthcheck:
      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
      interval: 30s
      timeout: 5s
      retries: 3
      start_period: 10s
    depends_on:
      - fileserver

  fileserver:
    image: node:22-alpine
    container_name: fileserver
    command: ["npx", "-y", "@modelcontextprotocol/server-filesystem", "/tmp"]
    environment:
      - HOME=/Users/test
    restart: unless-stopped
"
`;

exports[`generateDockerRuntime > snapshot: multi-agent Docker runtime 1`] = `
"import * as AgentAlphaAgent from './agents/AgentAlpha.js';
import * as AgentBetaAgent from './agents/AgentBeta.js';
import * as AgentGammaAgent from './agents/AgentGamma.js';
import { createServer } from 'node:http';

/**
 * AgentForge Docker Runtime
 * 3 agent(s) available
 * Generated by @agentforge/target-docker
 */

const agents: Record<string, { chat: (msg: string) => Promise<string>; resetConversation: () => void; agentName: string }> = {
  'AgentAlpha': AgentAlphaAgent,
  'AgentBeta': AgentBetaAgent,
  'AgentGamma': AgentGammaAgent,
};

const agentNames = Object.keys(agents);

const PORT = parseInt(process.env['PORT'] ?? '3000', 10);

function parseBody(req: import('node:http').IncomingMessage): Promise<string> {
  return new Promise((resolve, reject) => {
    const chunks: Buffer[] = [];
    req.on('data', (chunk: Buffer) => chunks.push(chunk));
    req.on('end', () => resolve(Buffer.concat(chunks).toString('utf-8')));
    req.on('error', reject);
  });
}

const server = createServer(async (req, res) => {
  const url = new URL(req.url ?? '/', \`http://localhost:\${PORT}\`);
  const pathname = url.pathname;

  // Health check
  if (pathname === '/health' && req.method === 'GET') {
    res.writeHead(200, { 'Content-Type': 'application/json' });
    res.end(JSON.stringify({ status: 'ok', agents: agentNames }));
    return;
  }

  // List agents
  if (pathname === '/agents' && req.method === 'GET') {
    res.writeHead(200, { 'Content-Type': 'application/json' });
    res.end(JSON.stringify({ agents: agentNames }));
    return;
  }

  // Agent chat: POST /agents/:name/chat
  const chatMatch = pathname.match(/^\\/agents\\/([^/]+)\\/chat$/);
  if (chatMatch && req.method === 'POST') {
    const agentName = decodeURIComponent(chatMatch[1]!);
    const agent = agents[agentName];

    if (!agent) {
      res.writeHead(404, { 'Content-Type': 'application/json' });
      res.end(JSON.stringify({ error: \`Agent '\${agentName}' not found\`, available: agentNames }));
      return;
    }

    try {
      const body = await parseBody(req);
      const parsed = JSON.parse(body) as { message?: string };
      const message = parsed.message ?? '';

      if (!message) {
        res.writeHead(400, { 'Content-Type': 'application/json' });
        res.end(JSON.stringify({ error: 'Missing "message" field in request body' }));
        return;
      }

      const response = await agent.chat(message);
      res.writeHead(200, { 'Content-Type': 'application/json' });
      res.end(JSON.stringify({ agent: agentName, response }));
    } catch (error) {
      res.writeHead(500, { 'Content-Type': 'application/json' });
      res.end(JSON.stringify({ error: error instanceof Error ? error.message : 'Internal server error' }));
    }
    return;
  }

  // Agent reset: POST /agents/:name/reset
  const resetMatch = pathname.match(/^\\/agents\\/([^/]+)\\/reset$/);
  if (resetMatch && req.method === 'POST') {
    const agentName = decodeURIComponent(resetMatch[1]!);
    const agent = agents[agentName];

    if (!agent) {
      res.writeHead(404, { 'Content-Type': 'application/json' });
      res.end(JSON.stringify({ error: \`Agent '\${agentName}' not found\`, available: agentNames }));
      return;
    }

    agent.resetConversation();
    res.writeHead(200, { 'Content-Type': 'application/json' });
    res.end(JSON.stringify({ agent: agentName, status: 'conversation reset' }));
    return;
  }

  // Not found
  res.writeHead(404, { 'Content-Type': 'application/json' });
  res.end(JSON.stringify({ error: 'Not found', routes: ['GET /health', 'GET /agents', 'POST /agents/:name/chat', 'POST /agents/:name/reset'] }));
});

server.listen(PORT, () => {
  console.log(\`AgentForge Docker Runtime listening on port \${PORT}\`);
  console.log(\`Agents: \${agentNames.join(', ')}\`);
  console.log(\`Routes: GET /health, GET /agents, POST /agents/:name/chat, POST /agents/:name/reset\`);
});
"
`;

exports[`generateDockerRuntime > snapshot: single agent Docker runtime 1`] = `
"import * as TestAgentAgent from './agents/TestAgent.js';
import { createServer } from 'node:http';

/**
 * AgentForge Docker Runtime
 * 1 agent(s) available
 * Generated by @agentforge/target-docker
 */

const agents: Record<string, { chat: (msg: string) => Promise<string>; resetConversation: () => void; agentName: string }> = {
  'TestAgent': TestAgentAgent,
};

const agentNames = Object.keys(agents);

const PORT = parseInt(process.env['PORT'] ?? '3000', 10);

function parseBody(req: import('node:http').IncomingMessage): Promise<string> {
  return new Promise((resolve, reject) => {
    const chunks: Buffer[] = [];
    req.on('data', (chunk: Buffer) => chunks.push(chunk));
    req.on('end', () => resolve(Buffer.concat(chunks).toString('utf-8')));
    req.on('error', reject);
  });
}

const server = createServer(async (req, res) => {
  const url = new URL(req.url ?? '/', \`http://localhost:\${PORT}\`);
  const pathname = url.pathname;

  // Health check
  if (pathname === '/health' && req.method === 'GET') {
    res.writeHead(200, { 'Content-Type': 'application/json' });
    res.end(JSON.stringify({ status: 'ok', agents: agentNames }));
    return;
  }

  // List agents
  if (pathname === '/agents' && req.method === 'GET') {
    res.writeHead(200, { 'Content-Type': 'application/json' });
    res.end(JSON.stringify({ agents: agentNames }));
    return;
  }

  // Agent chat: POST /agents/:name/chat
  const chatMatch = pathname.match(/^\\/agents\\/([^/]+)\\/chat$/);
  if (chatMatch && req.method === 'POST') {
    const agentName = decodeURIComponent(chatMatch[1]!);
    const agent = agents[agentName];

    if (!agent) {
      res.writeHead(404, { 'Content-Type': 'application/json' });
      res.end(JSON.stringify({ error: \`Agent '\${agentName}' not found\`, available: agentNames }));
      return;
    }

    try {
      const body = await parseBody(req);
      const parsed = JSON.parse(body) as { message?: string };
      const message = parsed.message ?? '';

      if (!message) {
        res.writeHead(400, { 'Content-Type': 'application/json' });
        res.end(JSON.stringify({ error: 'Missing "message" field in request body' }));
        return;
      }

      const response = await agent.chat(message);
      res.writeHead(200, { 'Content-Type': 'application/json' });
      res.end(JSON.stringify({ agent: agentName, response }));
    } catch (error) {
      res.writeHead(500, { 'Content-Type': 'application/json' });
      res.end(JSON.stringify({ error: error instanceof Error ? error.message : 'Internal server error' }));
    }
    return;
  }

  // Agent reset: POST /agents/:name/reset
  const resetMatch = pathname.match(/^\\/agents\\/([^/]+)\\/reset$/);
  if (resetMatch && req.method === 'POST') {
    const agentName = decodeURIComponent(resetMatch[1]!);
    const agent = agents[agentName];

    if (!agent) {
      res.writeHead(404, { 'Content-Type': 'application/json' });
      res.end(JSON.stringify({ error: \`Agent '\${agentName}' not found\`, available: agentNames }));
      return;
    }

    agent.resetConversation();
    res.writeHead(200, { 'Content-Type': 'application/json' });
    res.end(JSON.stringify({ agent: agentName, status: 'conversation reset' }));
    return;
  }

  // Not found
  res.writeHead(404, { 'Content-Type': 'application/json' });
  res.end(JSON.stringify({ error: 'Not found', routes: ['GET /health', 'GET /agents', 'POST /agents/:name/chat', 'POST /agents/:name/reset'] }));
});

server.listen(PORT, () => {
  console.log(\`AgentForge Docker Runtime listening on port \${PORT}\`);
  console.log(\`Agents: \${agentNames.join(', ')}\`);
  console.log(\`Routes: GET /health, GET /agents, POST /agents/:name/chat, POST /agents/:name/reset\`);
});
"
`;

exports[`generateDockerfile > snapshot: full Dockerfile 1`] = `
"# ─── Stage 1: Build ──────────────────────────────────────────────────────────
FROM node:22-alpine AS builder

WORKDIR /app

# Install dependencies first for better layer caching
COPY package.json package-lock.json* ./
RUN npm install

# Copy source and compile
COPY . .
RUN npx tsc

# ─── Stage 2: Runtime ────────────────────────────────────────────────────────
FROM node:22-alpine AS runtime

WORKDIR /app

# Copy package files and install production dependencies only
COPY package.json package-lock.json* ./
RUN npm install --omit=dev

# Copy compiled output from builder
COPY --from=builder /app/dist ./dist

# Set environment
ENV NODE_ENV=production

# Expose the HTTP port
EXPOSE 3000

# Health check
HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \\
  CMD wget --no-verbose --tries=1 --spider http://localhost:3000/health || exit 1

# Start the runtime
CMD ["node", "dist/runtime.js"]
"
`;

exports[`generateEnvExample > snapshot: env example with multiple vars 1`] = `
"# Environment variables for TestStack
# Copy this file to .env and fill in the values.

ANTHROPIC_API_KEY=
ORG_ID=
OPENAI_API_KEY=
"
`;
